--- a/xpi/content/css/alt_addonspage.css
+++ b/xpi/content/css/alt_addonspage.css
@@ -3,8 +3,11 @@
 	#detail-contributions{
 	  -moz-box-ordinal-group: 9 !important;
 	}
-	#detail-desc-container {
+	#detail-controls{
 	  -moz-box-ordinal-group: 10 !important;
+	}
+	#detail-desc-container {
+	  -moz-box-ordinal-group: 11 !important;
 	}
 
 }
