--- a/xpi/content/css/tabs_devedextra.css
+++ b/xpi/content/css/tabs_devedextra.css
@@ -1,11 +1,13 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 @-moz-document url(chrome://browser/content/browser.xul) {
+	#main-window[developertheme="true"] #navigator-toolbox #TabsToolbar .tabs-newtab-button,
 	#main-window[developertheme="true"] #navigator-toolbox #TabsToolbar .tabs-newtab-button:hover {
 	  background-size: 100% !important;
 	}
 }
 
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
+	.tabactcolorbox,
 	.tabcolorbox,
 	.tabhovcolorbox,
 	.tabpencolorbox,
