--- a/xpi/content/css/tbconmenu.css
+++ b/xpi/content/css/tbconmenu.css
@@ -4,6 +4,7 @@
   
 	#toolbar-context-menu .customize-context-moveToPanel,
 	#toolbar-context-menu .customize-context-removeFromToolbar,
+	#toolbar-context-menu .customize-context-removeFromToolbar + menuseparator,
 	#toolbar-context-reloadAllTabs,
 	#toolbar-context-bookmarkAllTabs,
 	#toolbar-context-undoCloseTab,
