--- a/xpi/content/css/winaero/smallnavbutextra.css
+++ b/xpi/content/css/winaero/smallnavbutextra.css
@@ -32,18 +32,33 @@
 	#main-window[ctraddon_appbutton_on_navbar="true"] #appmenu-popup {
 	  margin-top:0px !important;
 	}
-
-	#navigator-toolbox #nav-bar #back-button > .toolbarbutton-icon{
-	  padding: 0px 0px !important;
-      margin: 0px 0 !important;
-	}
 	
-	#navigator-toolbox #nav-bar #forward-button > .toolbarbutton-icon{
+	#main-window:not([fx40plus="true"]) #navigator-toolbox #nav-bar #back-button > .toolbarbutton-icon{
 	  padding: 0px 0px !important;
-      margin: 0px !important;
+	  margin: 0px 0 !important;
 	}
-	#navigator-toolbox #nav-bar #forward-button{
-      margin: -1px 0 !important;
+		
+	#main-window:not([fx40plus="true"]) #navigator-toolbox #nav-bar #forward-button > .toolbarbutton-icon{
+	  padding: 0px 0px !important;
+	  margin: 0px !important;
+	}
+	#main-window:not([fx40plus="true"]) #navigator-toolbox #nav-bar #forward-button{
+	  margin: -1px 0 !important;
+	}
+
+	@media (max-resolution: 1.0dppx) {
+		#main-window[fx40plus="true"] #navigator-toolbox #nav-bar #back-button > .toolbarbutton-icon{
+		  padding: 0px 0px !important;
+		  margin: 0px 0 !important;
+		}
+		
+		#main-window[fx40plus="true"] #navigator-toolbox #nav-bar #forward-button > .toolbarbutton-icon{
+		  padding: 0px 0px !important;
+		  margin: 0px !important;
+		}
+		#main-window[fx40plus="true"] #navigator-toolbox #nav-bar #forward-button{
+		  margin: -1px 0 !important;
+		}
 	}
 
 	/* Fx31+*/
@@ -155,9 +170,15 @@
 	#nav-bar * {
 	  clip-path: none !important;
 	}
-
+	
 	#nav-bar #urlbar-container #back-button:not([cui-areatype="menu-panel"]) {
 	  -moz-image-region: rect(0, 54px, 18px, 36px) !important;
+	}
+	
+	@media (min-resolution: 1.1dppx) {
+		#main-window[fx40plus="true"] #nav-bar #urlbar-container #back-button:not([cui-areatype="menu-panel"]) {
+		  -moz-image-region: rect(0, 108px, 36px, 72px) !important;
+		}
 	}
 
 	#nav-bar #urlbar-container #forward-button[disabled]{
@@ -186,6 +207,16 @@
 	  padding: 2px !important;
 	}
 	
+	#nav-bar #back-button:not(:hover) > .toolbarbutton-icon,
+	#nav-bar #forward-button:not(:hover) > .toolbarbutton-icon,
+	#nav-bar #back-button:hover[disabled] > .toolbarbutton-icon,
+	#nav-bar #forward-button:hover[disabled] > .toolbarbutton-icon{
+	  -moz-appearance: none !important;
+	  border: 0px solid transparent !important;
+	  box-shadow: none !important;
+	  background: none !important;
+	}
+	
 	@media (max-resolution: 1.0dppx) {
 		#main-window[fx40plus="true"] #nav-bar .toolbarbutton-menubutton-button > .toolbarbutton-icon,
 		#main-window[fx40plus="true"] #nav-bar .toolbarbutton-1:not([type="menu"]) > .toolbarbutton-icon{
@@ -197,16 +228,37 @@
 		#main-window[fx40plus="true"] #nav-bar #bookmarks-menu-button[cui-areatype="toolbar"] > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
 		  width: unset !important;;
 		}
-	}
 
-	#nav-bar #back-button:not(:hover) > .toolbarbutton-icon,
-	#nav-bar #forward-button:not(:hover) > .toolbarbutton-icon,
-	#nav-bar #back-button:hover[disabled] > .toolbarbutton-icon,
-	#nav-bar #forward-button:hover[disabled] > .toolbarbutton-icon{
-	  -moz-appearance: none !important;
-	  border: 0px solid transparent !important;
-	  box-shadow: none !important;
-	  background: none !important;
+	}
+	
+	@media (min-resolution: 1.1dppx) {
+		#main-window[fx40plus="true"] #nav-bar toolbarbutton[cui-areatype="toolbar"] > :-moz-any(#zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button) > .toolbarbutton-icon,
+		#main-window[fx40plus="true"] #nav-bar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button, #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #privatebrowsing-button, #save-page-button, #switch-to-metro-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #panic-button, #web-apps-button, #webide-button, #loop-button, #pocket-button):-moz-any([cui-areatype="toolbar"],:not([cui-areatype])) > .toolbarbutton-icon,
+		#main-window[fx40plus="true"] #nav-bar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button, #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #privatebrowsing-button, #save-page-button, #switch-to-metro-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #panic-button, #web-apps-button, #webide-button, #loop-button, #pocket-button):-moz-any([cui-areatype="toolbar"],:not([cui-areatype])) > .toolbarbutton-menubutton-button > .toolbarbutton-icon,
+		#main-window[fx40plus="true"] #nav-bar #bookmarks-menu-button[cui-areatype="toolbar"] > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon,
+		#main-window[fx40plus="true"][defaultfxtheme="true"] #nav-bar :-moz-any(#ctraddon_bookmarks-button,#ctraddon_history-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_ctr-button) > .toolbarbutton-icon {
+		  width: 18px !important;
+		  height: 18px !important;
+		  padding: 0 !important;
+		}
+		#nav-bar #back-button:hover > .toolbarbutton-icon,
+		#nav-bar #forward-button:hover > .toolbarbutton-icon,
+		#nav-bar #back-button:not(:hover) > .toolbarbutton-icon,
+		#nav-bar #forward-button:not(:hover) > .toolbarbutton-icon,
+		#nav-bar #back-button:hover[disabled] > .toolbarbutton-icon,
+		#nav-bar #forward-button:hover[disabled] > .toolbarbutton-icon{
+		  -moz-appearance: none !important;
+		  border: 1px solid transparent !important;
+		  box-shadow: none !important;
+		  background: none !important;
+		}
+		#nav-bar #urlbar-container #back-button,
+		#nav-bar #urlbar-container #forward-button{
+		  padding-top:2px !important;
+		  padding-bottom:2px !important;
+		  margin-top:1px !important;
+		  margin-bottom:2px !important;
+		}
 	}
 
 	/* START: urlbar border tweaking (default theme does not provide left urlbar border) */
@@ -285,7 +337,6 @@
 	#nav-bar toolbarbutton[id^="toggle-button-"] .toolbarbutton-icon {
 	  width:16px !important;
 	}
-	
 	#main-window:not([fx36plus="true"]) #nav-bar toolbarbutton[id^="action-button-"] .toolbarbutton-icon,
 	#main-window:not([fx36plus="true"]) #nav-bar toolbarbutton[id^="toggle-button-"] .toolbarbutton-icon {
 	  width:22px !important;
@@ -316,7 +367,6 @@
 	#navigator-toolbox[slimChrome="true"] #nav-bar{
 	  padding-bottom:2px !important;
 	}
-	
 	/* Disconnect */
 	#nav-bar #disconnect-item #disconnect-badge{
 	  margin-top:6px !important;
@@ -364,7 +414,6 @@
 	#nav-bar #zoompage-zoomout-n image{
 	  padding:0px !important;
 	}
-	
 	/* special buttons inside urlbars boxes */
 	#urlbar #notification-popup-box + box toolbarbutton,
 	#urlbar #notification-popup-box + box toolbarbutton .toolbarbutton-icon,
