--- a/xpi/content/css/winxp/smallnavbutextra.css
+++ b/xpi/content/css/winxp/smallnavbutextra.css
@@ -33,14 +33,26 @@
 	  margin-top:0px !important;
 	}
 
-    #navigator-toolbox #nav-bar #back-button > .toolbarbutton-icon {
+	#main-window:not([fx40plus="true"]) #navigator-toolbox #nav-bar #back-button > .toolbarbutton-icon {
 	  padding: 3px 1px !important;
-      margin: 0px !important;
+	  margin: 0px !important;
 	}
 
-	#navigator-toolbox #nav-bar #forward-button > .toolbarbutton-icon {
+	#main-window:not([fx40plus="true"]) #navigator-toolbox #nav-bar #forward-button > .toolbarbutton-icon {
 	  padding: 1px 1px !important;
-      margin: 0px !important;
+	  margin: 0px !important;
+	}
+
+	@media (max-resolution: 1.0dppx) {
+		#main-window[fx40plus="true"] #navigator-toolbox #nav-bar #back-button > .toolbarbutton-icon {
+		  padding: 3px 1px !important;
+		  margin: 0px !important;
+		}
+
+		#main-window[fx40plus="true"] #navigator-toolbox #nav-bar #forward-button > .toolbarbutton-icon {
+		  padding: 1px 1px !important;
+		  margin: 0px !important;
+		}
 	}
 	
 	/* Fx31+*/
@@ -105,8 +117,16 @@
 	  clip-path: none !important;
 	}
 
+
 	#nav-bar #urlbar-container #back-button:not([cui-areatype="menu-panel"]) {
 	  -moz-image-region: rect(0, 54px, 18px, 36px) !important;
+	}
+
+	
+	@media (min-resolution: 1.1dppx) {
+		#main-window[fx40plus="true"] #nav-bar #urlbar-container #back-button:not([cui-areatype="menu-panel"]) {
+		  -moz-image-region: rect(0, 108px, 36px, 72px) !important;
+		}
 	}
 
 	#nav-bar #urlbar-container #forward-button[disabled]{
@@ -135,6 +155,16 @@
 	  padding: 2px !important;
 	}
 	
+	#nav-bar #back-button:not(:hover) > .toolbarbutton-icon,
+	#nav-bar #forward-button:not(:hover) > .toolbarbutton-icon,
+	#nav-bar #back-button:hover[disabled] > .toolbarbutton-icon,
+	#nav-bar #forward-button:hover[disabled] > .toolbarbutton-icon{
+	  -moz-appearance: none !important;
+	  border: 0px solid transparent !important;
+	  box-shadow: none !important;
+	  background: none !important;
+	}
+	
 	@media (max-resolution: 1.0dppx) {
 		#main-window[fx40plus="true"] #nav-bar .toolbarbutton-menubutton-button > .toolbarbutton-icon,
 		#main-window[fx40plus="true"] #nav-bar .toolbarbutton-1:not([type="menu"]) > .toolbarbutton-icon{
@@ -146,16 +176,36 @@
 		#main-window[fx40plus="true"] #nav-bar #bookmarks-menu-button[cui-areatype="toolbar"] > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
 		  width: unset !important;;
 		}
-	}
 
-	#nav-bar #back-button:not(:hover) > .toolbarbutton-icon,
-	#nav-bar #forward-button:not(:hover) > .toolbarbutton-icon,
-	#nav-bar #back-button:hover[disabled] > .toolbarbutton-icon,
-	#nav-bar #forward-button:hover[disabled] > .toolbarbutton-icon{
-	  -moz-appearance: none !important;
-	  border: 0px solid transparent !important;
-	  box-shadow: none !important;
-	  background: none !important;
+	}
+	@media (min-resolution: 1.1dppx) {
+		#main-window[fx40plus="true"] #nav-bar toolbarbutton[cui-areatype="toolbar"] > :-moz-any(#zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button) > .toolbarbutton-icon,
+		#main-window[fx40plus="true"] #nav-bar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button, #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #privatebrowsing-button, #save-page-button, #switch-to-metro-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #panic-button, #web-apps-button, #webide-button, #loop-button, #pocket-button):-moz-any([cui-areatype="toolbar"],:not([cui-areatype])) > .toolbarbutton-icon,
+		#main-window[fx40plus="true"] #nav-bar :-moz-any(#back-button, #forward-button, #home-button, #print-button, #downloads-button, #bookmarks-menu-button, #new-tab-button, #new-window-button, #fullscreen-button, #sync-button, #feed-button, #tabview-button, #social-share-button, #open-file-button, #find-button, #developer-button, #preferences-button, #privatebrowsing-button, #save-page-button, #switch-to-metro-button, #add-ons-button, #history-panelmenu, #nav-bar-overflow-button, #PanelUI-menu-button, #characterencoding-button, #email-link-button, #sidebar-button, #zoom-out-button, #zoom-reset-button, #zoom-in-button, #cut-button, #copy-button, #paste-button, #e10s-button, #panic-button, #web-apps-button, #webide-button, #loop-button, #pocket-button):-moz-any([cui-areatype="toolbar"],:not([cui-areatype])) > .toolbarbutton-menubutton-button > .toolbarbutton-icon,
+		#main-window[fx40plus="true"] #nav-bar #bookmarks-menu-button[cui-areatype="toolbar"] > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon,
+		#main-window[fx40plus="true"][defaultfxtheme="true"] #nav-bar :-moz-any(#ctraddon_bookmarks-button,#ctraddon_history-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_ctr-button) > .toolbarbutton-icon {
+		  width: 18px !important;
+		  height: 18px !important;
+		  padding: 0 !important;
+		}
+		#main-window[fx40plus="true"] #nav-bar #back-button:hover > .toolbarbutton-icon,
+		#main-window[fx40plus="true"] #nav-bar #forward-button:hover > .toolbarbutton-icon,
+		#main-window[fx40plus="true"] #nav-bar #back-button:not(:hover) > .toolbarbutton-icon,
+		#main-window[fx40plus="true"] #nav-bar #forward-button:not(:hover) > .toolbarbutton-icon,
+		#main-window[fx40plus="true"] #nav-bar #back-button:hover[disabled] > .toolbarbutton-icon,
+		#main-window[fx40plus="true"] #nav-bar #forward-button:hover[disabled] > .toolbarbutton-icon{
+		  -moz-appearance: none !important;
+		  border: 1px solid transparent !important;
+		  box-shadow: none !important;
+		  background: none !important;
+		}
+		#main-window[fx40plus="true"] #nav-bar #urlbar-container #back-button,
+		#main-window[fx40plus="true"] #nav-bar #urlbar-container #forward-button{
+		  padding-top:2px !important;
+		  padding-bottom:2px !important;
+		  margin-top:1px !important;
+		  margin-bottom:2px !important;
+		}
 	}
 
 	/* START: urlbar border tweaking (default theme does not provide left urlbar border) */
