--- a/xpi/content/css/winaero/overlayextra.css
+++ b/xpi/content/css/winaero/overlayextra.css
@@ -67,6 +67,40 @@
 	  -moz-padding-end: 14px !important;
 	}
 	
+	@media (min-resolution: 1.1dppx) {
+		#main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button) {
+		  list-style-image: url("chrome://browser/skin/Toolbar@2x.png");
+		}
+		
+		#main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button):-moz-lwtheme-brighttext {
+		  list-style-image: url("chrome://browser/skin/Toolbar-inverted@2x.png");
+		}
+		#main-window[defaultfxtheme="true"] #ctraddon_history-menu-toolbar-button,
+		#main-window[defaultfxtheme="true"] #ctraddon_history-button {
+		  -moz-image-region: rect(0, 360px, 36px, 324px);
+		}
+		#main-window[defaultfxtheme="true"] #ctraddon_back-button {
+		  -moz-image-region: rect(0, 108px, 36px, 72px);
+		}
+		#main-window[defaultfxtheme="true"] #ctraddon_forward-button {
+		  -moz-image-region: rect(0, 144px, 36px, 108px);
+		}
+		#main-window[defaultfxtheme="true"] #ctraddon_reload-button {
+		  -moz-image-region: rect(0, 180px, 36px, 144px);
+		}
+		#main-window[defaultfxtheme="true"] #ctraddon_stop-button {
+		  -moz-image-region: rect(0, 216px, 36px, 180px);
+		}
+		#main-window[defaultfxtheme="true"] #nav-bar :-moz-any(#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button) .toolbarbutton-icon {
+		  width: 32px !important;
+		  height: 24px !important;
+		}
+		#main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button) .toolbarbutton-icon {
+		  width: 18px !important;
+		  height: 18px !important;
+		}
+	}
+	
 	#main-window[defaultfxtheme="true"] #nav-bar #ctraddon_appbutton > .toolbarbutton-icon {
 	  padding-top: 2px !important;
 	  padding-bottom: 2px !important;	
