--- a/xpi/content/css/linux/overlayextra.css
+++ b/xpi/content/css/linux/overlayextra.css
@@ -173,7 +173,8 @@
 	}
 
 	#ClassicTRoptionsPane #ctraddon_pw_tabMinWidth,
-	#ClassicTRoptionsPane #ctraddon_pw_tabMaxWidth{
+	#ClassicTRoptionsPane #ctraddon_pw_tabMaxWidth,
+	#ClassicTRoptionsPane #ctraddon_pw_tabClipWidth{
 	  width:70px !important;
 	  max-width:90px !important;
 	}
