--- a/xpi/content/css/mode_icons_big.css
+++ b/xpi/content/css/mode_icons_big.css
@@ -141,6 +141,7 @@
 	}
 	toolbar #PanelUI-menu-button .toolbarbutton-badge-container image{
 	  min-width:32px !important;
+      min-height:32px !important;
 	}
 
 	#nav-bar #cut-button {
@@ -176,6 +177,11 @@
 	#nav-bar-overflow-button {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/menuPanel2.png") !important;
 	  -moz-image-region: rect(0px, 256px, 32px, 224px) !important;
+	}
+	
+	#nav-bar #bookmarks-menu-button > .toolbarbutton-menubutton-dropmarker > .dropmarker-icon {
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/menuPanel2.png") !important;
+	  -moz-image-region: rect(0px, 288px, 32px, 256px) !important;
 	}
 
 	#nav-bar #pocket-button[cui-areatype="toolbar"] {
