--- a/xpi/content/css/alt_newtabpage.css
+++ b/xpi/content/css/alt_newtabpage.css
@@ -2,6 +2,7 @@
 
 	#newtab-intro-what,
 	#newtab-search-form,
+	#newtab-margin-undo-container,
 	.newtab-suggested-bounds,
 	.newtab-suggested,
 	.newtab-sponsored {
