--- a/xpi/content/css/svgfilters.css
+++ b/xpi/content/css/svgfilters.css
@@ -51,6 +51,7 @@
 	#forward-button .toolbarbutton-icon,
 	#new-window-button .toolbarbutton-icon,
 	#new-tab-button .toolbarbutton-icon,
+	#ctraddon_go-button .toolbarbutton-icon,
 	.search-go-button,
 	#downloads-button .toolbarbutton-icon,
 	#go-button:hover,
