--- a/xpi/content/css/mac/overlayextra.css
+++ b/xpi/content/css/mac/overlayextra.css
@@ -41,13 +41,16 @@
 	#ctraddon_back-button:-moz-lwtheme-brighttext {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/back-inv.png");
 	}
-	#ctraddon_forward-button {
+	#ctraddon_forward-button,
+	#ctraddon_go-button {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/forward_mac.png");
 	}
-	#ctraddon_forward-button:active {
+	#ctraddon_forward-button:active,
+	#ctraddon_go-button:active{
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/forward2_mac.png");
 	}
-	#ctraddon_forward-button:-moz-lwtheme-brighttext {
+	#ctraddon_forward-button:-moz-lwtheme-brighttext,
+	#ctraddon_go-button:-moz-lwtheme-brighttext {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/forward-inv.png");
 	}
 	#ctraddon_stop-button {
@@ -71,10 +74,10 @@
 	
 	/* for Retina display */
 	@media (min-resolution: 2dppx) {
-	  #main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_back-button, #ctraddon_forward-button, #ctraddon_bookmarks-menu-toolbar-button, #ctraddon_bookmarks-button, #ctraddon_history-button, #ctraddon_history-menu-toolbar-button, #ctraddon_reload-button, #ctraddon_stop-button)  {
+	  #main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_back-button, #ctraddon_forward-button, #ctraddon_bookmarks-menu-toolbar-button, #ctraddon_bookmarks-button, #ctraddon_history-button, #ctraddon_history-menu-toolbar-button, #ctraddon_reload-button, #ctraddon_stop-button,#ctraddon_go-button)  {
 		list-style-image: url("chrome://browser/skin/Toolbar@2x.png") !important;
 	  }
-	  #main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_back-button, #ctraddon_forward-button, #ctraddon_bookmarks-menu-toolbar-button, #ctraddon_bookmarks-button, #ctraddon_history-button, #ctraddon_history-menu-toolbar-button, #ctraddon_reload-button, #ctraddon_stop-button):-moz-lwtheme-brighttext   {
+	  #main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_back-button, #ctraddon_forward-button, #ctraddon_bookmarks-menu-toolbar-button, #ctraddon_bookmarks-button, #ctraddon_history-button, #ctraddon_history-menu-toolbar-button, #ctraddon_reload-button, #ctraddon_stop-button,#ctraddon_go-button):-moz-lwtheme-brighttext   {
 		list-style-image: url("chrome://browser/skin/Toolbar-inverted@2x.png") !important;
 	  }
 	  
@@ -86,11 +89,13 @@
 		-moz-image-region: rect(36px, 108px, 72px, 72px) !important;
 	  }
 
-	  #main-window[defaultfxtheme="true"] #ctraddon_forward-button {
+	  #main-window[defaultfxtheme="true"] #ctraddon_forward-button,
+	  #main-window[defaultfxtheme="true"] #ctraddon_go-button {
 		-moz-image-region: rect(0, 144px, 36px, 108px) !important;
 	  }
 
-	  #main-window[defaultfxtheme="true"] #ctraddon_forward-button:hover:active:not([disabled="true"]) {
+	  #main-window[defaultfxtheme="true"] #ctraddon_forward-button:hover:active:not([disabled="true"]),
+	    #main-window[defaultfxtheme="true"] #ctraddon_go-button:hover:active:not([disabled="true"]){
 		-moz-image-region: rect(36px, 144px, 72px, 108px) !important;
 	  }
 	  
@@ -128,7 +133,7 @@
 	  #main-window[defaultfxtheme="true"] #ctraddon_stop-button:hover:active:not([disabled="true"]) {
 		-moz-image-region: rect(36px, 216px, 72px, 180px) !important;
 	  }
-	  #main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_back-button, #ctraddon_forward-button, #ctraddon_bookmarks-menu-toolbar-button, #ctraddon_bookmarks-button, #ctraddon_history-button,#ctraddon_history-menu-toolbar-button, #ctraddon_reload-button, #ctraddon_stop-button,#ctraddon_ctr-button) > .toolbarbutton-icon {
+	  #main-window[defaultfxtheme="true"] :-moz-any(#ctraddon_back-button, #ctraddon_forward-button, #ctraddon_bookmarks-menu-toolbar-button, #ctraddon_bookmarks-button, #ctraddon_history-button,#ctraddon_history-menu-toolbar-button, #ctraddon_reload-button, #ctraddon_stop-button,#ctraddon_ctr-button,#ctraddon_go-button) > .toolbarbutton-icon {
 		width: 18px !important;
 	  }
 	  
