--- a/xpi/content/css/mode_icons_big.css
+++ b/xpi/content/css/mode_icons_big.css
@@ -12,6 +12,7 @@
 	  list-style-image: url(chrome://classic_theme_restorer/content/images/menuPanel3.png) !important;
 	}
 	
+	#nav-bar #ctraddon_go-button > .toolbarbutton-icon,
 	#nav-bar #ctraddon_forward-button > .toolbarbutton-icon{
 	  -moz-image-region: rect(0px, 96px, 32px, 64px) !important;
 	  list-style-image: url(chrome://classic_theme_restorer/content/images/menuPanel3.png) !important;
