--- a/xpi/content/css/addonversion.css
+++ b/xpi/content/css/addonversion.css
@@ -3,7 +3,8 @@
 		Nightly builds (Fx41+) for no valid reason!
 	*/
 	
-	#addon-list .addon:not([type="userstyle"])[status="installed"] {
+	#addon-list .addon:not([type="userstyle"])[status="installed"],
+	#search-list .addon:not([type="userstyle"])[status="installed"] {
 	  -moz-binding: url("chrome://classic_theme_restorer/content/addonversion.xml#addon-generic") !important;
 	}
 
