--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -812,6 +812,14 @@
 	  padding-left:20px !important;
 	  min-height:16px !important;
 	}
+	
+	#ctraddon_pw_alt_addonsp label,
+	#ctraddon_pw_alt_addonsm label,
+	#ctraddon_pw_addonversion label {
+	  background:url('chrome://classic_theme_restorer/content/images/appmenu_addons_lin.png') no-repeat left !important;
+	  padding-left:20px !important;
+	  min-height:16px !important;
+	}
 
 	#ctraddon_pw_noresizerxp label {
 	  background:url('chrome://classic_theme_restorer/content/images/resizer.png') no-repeat left !important;
